# disease_identifier

./: README.md  requirements.txt
diagnosis/: README.md  pyproject.toml
diagnosis/src/diagnosis/: crew.py  extract.py  main.py
diagnosis/src/diagnosis/config/: agents.yaml  tasks.yaml
